# pacman-clone

./: CMakeLists.txt  LICENSE  README.md
GEngineCore/: CMakeLists.txt
GEngineCore/src/Cameras/: Camera.cpp  Camera.h
GEngineCore/src/Components/: CameraComponent.cpp  CameraComponent.h  Component.cpp  Component.h  ComponentFactory.h  ComponentType.h  Shape2dRendererComponent.cpp  Shape2dRendererComponent.h  ShapeRenderer2dComponent.cpp  ShapeRenderer2dComponent.h  Texture2dRendererComponent.cpp  Texture2dRendererComponent.h  TextureRenderer2dComponent.h  TiledMap2dRendererComponent.cpp  TiledMap2dRendererComponent.h  TransformComponent.cpp  TransformComponent.h
GEngineCore/src/Constants/: MathConstants.h
GEngineCore/src/Core/: GEngineCoreApplication.cpp  GEngineCoreApplication.h
GEngineCore/src/Editor/ComponentsInspector/: ComponentInspectorEditor.h  TransformComponentInspectorEditor.cpp  TransformComponentInspectorEditor.h
GEngineCore/src/Editor/Extensions/: ImGuiExtensions.cpp  ImGuiExtensions.h
GEngineCore/src/Editor/Inspector/: EntityInspectorEditor.cpp  EntityInspectorEditor.h  GEngineObjectInspectorEditor.h  ResourcesInspectorEditor.cpp  ResourcesInspectorEditor.h
GEngineCore/src/Editor/MenuBar/: MenuBarEditor.cpp  MenuBarEditor.h
GEngineCore/src/Editor/ResourcesInspector/: ResourceInspectorEditor.h  TextureResourceInspectorEditor.cpp  TextureResourceInspectorEditor.h  TiledMapResourceInspectorEditor.cpp  TiledMapResourceInspectorEditor.h
GEngineCore/src/Editor/Windows/: EditorWindow.cpp  EditorWindow.h  HierarchyEditorWindow.cpp  HierarchyEditorWindow.h  InspectorEditorWindow.cpp  InspectorEditorWindow.h  ResourcesEditorWindow.cpp  ResourcesEditorWindow.h
GEngineCore/src/Entities/: Entity.cpp  Entity.h
GEngineCore/src/Events/: EntityDestroyedEvent.h  Event.h  EventBus.h  EventBuses.h
GEngineCore/src/Extensions/: MapExtensions.h  MathExtensions.h  RayLibExtensions.cpp  RayLibExtensions.h  StringExtensions.h  UnorderedMapExtensions.h  VectorExtensions.h
GEngineCore/src/Games/: Game.h
GEngineCore/src/Helpers/: PointerRef.h  PointersList.h
GEngineCore/src/Modules/: CameraModule.cpp  CameraModule.h  ComponentsModule.cpp  ComponentsModule.h  EditorModule.cpp  EditorModule.h  EntitiesModule.cpp  EntitiesModule.h  GameModule.cpp  GameModule.h  InputModule.cpp  InputModule.h  ModuleEvent.h  RenderingModule.cpp  RenderingModule.h  ResourcesModule.cpp  ResourcesModule.h  SystemsModule.cpp  SystemsModule.h  TransformsModule.cpp  TransformsModule.h  WindowModule.cpp  WindowModule.h
GEngineCore/src/Objects/: GEngineObject.h  GEngineObjectType.h
GEngineCore/src/Rendering/: ImGuiRenderer.cpp  ImGuiRenderer.h  LayeredRenderQueue.cpp  LayeredRenderQueue.h  Renderer2d.cpp  Renderer2d.h  SimpleRenderQueue.cpp  SimpleRenderQueue.h
GEngineCore/src/ResourceImporters/: ResourceImporter.cpp  ResourceImporter.h  TextureResourceImporter.cpp  TextureResourceImporter.h  TiledMapImporter.cpp  TiledMapImporter.h
GEngineCore/src/Resources/: Resource.cpp  Resource.h  ResourceType.h  TextureResource.cpp  TextureResource.h  TiledMapResource.cpp  TiledMapResource.h
GEngineCore/src/Systems/: System.h  TickShapeRenderer2dComponentsSystem.cpp  TickShapeRenderer2dComponentsSystem.h
TestGame/: CMakeLists.txt
TestGame/Tiled/: untitled.tiled-session
TestGame/Tiled/maps/: test-map.tmx
TestGame/Tiled/tilesets/: pac-man-tileset.tsx
TestGame/src/Bootstrap/: main.cpp
TestGame/src/Games/: TestGame.cpp  TestGame.h
